--- a/package.json
+++ b/package.json
@@ -35,16 +35,17 @@
     "webpack-cli": "^4.4.0",
     "webpack-dev-server": "^3.11.2"
   },
-    "dependencies": {
-      "@testing-library/jest-dom": "^4.2.4",
-      "@testing-library/react": "^9.3.2",
-      "@testing-library/user-event": "^7.1.2",
-      "emailjs-com": "^2.6.4",
-      "react": "^17.0.1",
-      "react-dom": "^17.0.1",
-      "react-scripts": "^4.0.2",
-      "smooth-scroll": "^16.1.3"
-    },
+  "dependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "classnames": "^2.3.2",
+    "emailjs-com": "^2.6.4",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-scripts": "^4.0.2",
+    "smooth-scroll": "^16.1.3"
+  },
   "resolutions": {
     "styled-components": "^5"
   }
